--- a/src/app/checkout/page.module.css
+++ b/src/app/checkout/page.module.css
@@ -18,7 +18,7 @@
 .ContentRight {
   width: 25%;
   padding: 20px;
-  background-color: #FFF0AB;
+  background-color: #ebebeb;
   border-radius: 4px;
 }
 
