--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -21,15 +21,7 @@
   background-position: center right;
   border-radius: 22px;
   background-color: #f7f7f7;
-  border: 1px solid #0000B2;
   transition: all ease 0.3s;
-}
-
-.SearchInput input:hover,
-.SearchInput input:focus,
-.SearchInput input:active {
-  background-color: #fff0ab;
-  border: 1px solid #0000B2;
 }
 
 .SubmitBtn {
@@ -77,7 +69,7 @@
 }
 
 .SearchResults .Results li:hover {
-  background-color: #fff0ab;
+  background-color: #f0f0f0;
 }
 
 .Overlay {
