--- a/src/components/SideMenu/SideMenu.module.css
+++ b/src/components/SideMenu/SideMenu.module.css
@@ -44,6 +44,6 @@
 
 .Menu a:hover,
 .Menu a.Active {
-  background-color: #fff0ab;
-  color: #0000B2;
+  background-color: #0000B2;
+  color: #fff;
 }
