--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,6 +7,7 @@
 }
 
 .HeaderWrap {
+  height: 87px;
   padding: 6px 0;
   display: flex;
   justify-content: space-between;
@@ -24,6 +25,10 @@
 
 .Logo {
   margin-right: 80px;
+}
+
+.Logo a {
+  display: flex;
 }
 
 .HeaderActions {
