--- a/src/components/LoginBtn/LoginBtn.module.css
+++ b/src/components/LoginBtn/LoginBtn.module.css
@@ -1,7 +1,7 @@
 .LoginBtn {
     padding: 10px;
     border-top: 2px solid #0000b2;
-    background-color: #fff0ab;
+    background-color: #ebebeb;
 }
 
 .LoginBtn p {
