--- a/src/app/sign-up/page.module.css
+++ b/src/app/sign-up/page.module.css
@@ -10,13 +10,13 @@
   width: 780px;
   padding: 20px;
   margin-top: 30px;
-  background-color: #fff7ea;
-  border-top: 5px solid #3E9538;
+  background-color: #ebebeb;
+  border-top: 5px solid #0000b2;
 }
 
 .Notes a {
   text-decoration: underline;
-  color: #3E9538;
+  color: #0000b2;
 }
 
 .ResendSuccess {
@@ -28,7 +28,7 @@
   width: 22px;
   height: 22px;
   margin-right: 5px;
-  color: #3E9538;
+  color: #0000b2;
 }
 
 .SignUpFormWrapper {
