--- a/src/components/RegionSelector/RegionSelector.module.css
+++ b/src/components/RegionSelector/RegionSelector.module.css
@@ -13,7 +13,7 @@
   font-weight: 600;
   cursor: pointer;
   border-radius: 4px;
-  color: #0000B2;
+  color: #0A0A5F;
   transition: all ease 0.3s;
 }
 
