--- a/src/app/products/[id]/page.module.css
+++ b/src/app/products/[id]/page.module.css
@@ -85,7 +85,7 @@
   width: 25%;
   padding: 15px;
   border-radius: 4px;
-  background-color: #0000b2;
+  background-color: #0A0A5F;
   color: #fff;
 }
 
