--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,7 +5,7 @@
 .Home .SubHeader {
   width: 100%;
   margin-top: 85px;
-  background: #0000b2;
+  background: #0A0A5F;
   position: fixed;
   z-index: 9;
 }
@@ -38,7 +38,7 @@
 .Home .SubTitle h2 {
   margin: 0;
   font-size: 26px;
-  color: #0000b2;
+  color: #0A0A5F;
 }
 
 .Home .Intro {
@@ -58,7 +58,7 @@
   line-height: 90px;
   text-align: center;
   font-weight: 700;
-  color: #0000b2;
+  color: #0A0A5F;
 }
 
 .Home .Intro h3,
@@ -68,7 +68,7 @@
   line-height: 54px;
   font-weight: 700;
   font-family: "Poppins", sans-serif;
-  color: #0000b2;
+  color: #0A0A5F;
 }
 
 .Home .Intro h3 a {
@@ -85,7 +85,7 @@
 }
 
 .Home .Message {
-  background-color: #0000b2;
+  background-color: #0A0A5F;
   height: 70px;
   display: flex;
   align-items: center;
@@ -196,7 +196,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #0000b2;
+  color: #0A0A5F;
 }
 
 .WhyUs .Overview > div + div {
@@ -217,7 +217,7 @@
 
 .WhyUs .Content {
   padding: 30px;
-  background-color: #0000b2;
+  background-color: #0A0A5F;
   border-radius: 5px;
   color: #fff;
 }
@@ -232,7 +232,7 @@
 }
 
 .Cetificates {
-  margin: 40px 0;
+  padding: 40px 0;
 }
 
 .Cetificates ul {
