--- a/src/app/products/page.module.css
+++ b/src/app/products/page.module.css
@@ -11,7 +11,7 @@
 .Filters {
   padding: 0 20px;
   flex: 0 0 260px;
-  background-color: #0000B2;
+  background-color: #0A0A5F;
   border-radius: 12px;
   color: #fff;
 }
