--- a/src/components/LoginBtn/LoginBtn.module.css
+++ b/src/components/LoginBtn/LoginBtn.module.css
@@ -1,6 +1,6 @@
 .LoginBtn {
     padding: 10px;
-    border-top: 2px solid #0000b2;
+    border-top: 2px solid #0A0A5F;
     background-color: #ebebeb;
 }
 
@@ -10,7 +10,7 @@
 
 .LoginBtn span,
 .LoginBtn a {
-    color: #0000b2;
+    color: #0A0A5F;
     text-decoration: underline;
     cursor: pointer;
 }
