--- a/src/components/Purchase/Purchase.module.css
+++ b/src/components/Purchase/Purchase.module.css
@@ -14,13 +14,13 @@
 }
 
 .Sizes .Size.Active {
-  border: 2px solid #0000B2;
+  border: 2px solid #0A0A5F;
   background-color: #ebebeb;
 }
 
 .Sizes .Size:hover {
   background-color: #ebebeb;
-  border: 2px solid #0000B2;
+  border: 2px solid #0A0A5F;
 }
 
 .Sizes .Size + .Size {
@@ -56,7 +56,7 @@
 .PricingList {
   padding: 30px 0 0 30px;
   cursor: pointer;
-  color: #0000B2;
+  color: #0A0A5F;
   text-decoration: underline;
 }
 
