--- a/src/components/Regions/Regions.module.css
+++ b/src/components/Regions/Regions.module.css
@@ -6,8 +6,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 1px solid#0000B2;
-  color: #0000B2;
+  border: 1px solid#0A0A5F;
+  color: #0A0A5F;
   font-size: 24px;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
@@ -26,6 +26,6 @@
 }
 
 .Region.Active:hover {
-  background-color: #0000B2;
+  background-color: #0A0A5F;
   color: #fff;
 }
